websocat/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/proxy-ssl-protocols: "TLSv1"
  name: ingress-for-bi
  namespace: frp
spec:
  rules:
  - host: bi.xinminghui.com
    http:
      paths:
      - backend:
          serviceName: frps-service
          servicePort: 8080
        path: /
      - backend:
          serviceName: websocat
          servicePort: 9999
        path: /iev9Einohngohiwaqu4mahkahham9naih9euMoonga4ooje3thie7sahdeeyee7theizi4neexaiMi4W
  tls:
  - hosts:
    - bi.xinminghui.com
    secretName: cert-bi-xinminghui-com
